Fri Sep 15 18:47:06 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.[ch]: Launch Type=URL entries, and slight
	  cosmetic updates

Thu Sep 14 18:45:00 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.c: use g_path_get_dirname instead of g_dirname

2000-09-09  Martin Baulig  <baulig@suse.de>

	* gnome-util.c (g_copy_vector): Allow the argument to be NULL.

Fri Sep 01 19:13:15 2000  George Lebl <jirka@5z.com>

	* gnome-url.[ch]: Use GError instead of homebrewed error return

2000-08-31  Martin Baulig  <baulig@suse.de>

	* gnome-i18n.c (gnome_i18n_get_language_list): Mark this as
	deprecated and call g_i18n_get_language_list().  Moved most
	stuff from this file into glib; you need the glib-2.0.patch
	in the patches/ directory in order to use it.

	* gnomelib-init.c: Initialize the gnome-vfs module.

Wed Aug 30 22:22:47 2000  George Lebl <jirka@5z.com>

	* Makefile.am: cosmetic cleanups done in search of errors

Thu Aug 24 03:11:54 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.c: use g_path_get_basename instead of g_basename

Thu Aug 24 02:17:20 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.c: remove g_hash_table_freeze calls as freeze/thaw
	  on hash tables is deprecated

Thu Aug 24 01:45:11 2000  George Lebl <jirka@5z.com>

	* gnome-mime.c: remove include of gtk/gtk.h

	* libgnome.h: remove gnome-dentry.h as it's in libcompat now

	* gnome-init2.c, gnome-ditem.c: whoops, it's g_path_get_basename not
	  g_path_basename

2000-08-07  Martin Baulig  <baulig@suse.de>

	Moved all deprecated files (i.e the ones that were linked into
	libgnome-1-compat and not into libgnome) into their own
	subdirectory (../libcompat).

	* gnome-dentry.c, gnome-dentry.h, gnome-help.c, gnome-help.h,
	gnome-popt.c, gnome-popt.h, gnome10-compat.c, gnome10-compat.h,
	libgnome-compat-1.0.h: Moved to ../libcompat/.

	* gnome-ditem.c: #include <popt.h> directly and not the deprecated
	"gnome-popt.h"
	* gnome-url.c: Likewise.

2000-07-31  Karl Eichwalder  <ke@suse.de>
