@@ -46,7 +46,6 @@ char *alloca ();
 #include <string.h>
 #include <unistd.h>	/* unlink() */
 #include <stdlib.h>	/* atoi() */
-#include <locale.h>	/* setlocale() */
 #include <sys/types.h>
 #include <sys/stat.h>
 #include <glib.h>
@@ -1440,7 +1439,6 @@ _gnome_config_get_float_with_default (const char *path, gboolean *def, gboolean 
 	ParsedPath *pp;
 	const char *r;
 	gdouble v;
-        char *old_locale;
 	
 	pp = parse_path (path, priv);
 	if (!priv && pp->opath[0] != '=')
@@ -1457,11 +1455,9 @@ _gnome_config_get_float_with_default (const char *path, gboolean *def, gboolean 
 	}
 
         /* make sure we read values in a consistent manner */
-        old_locale = g_strdup (setlocale (LC_NUMERIC, NULL));
-        setlocale (LC_NUMERIC, "C");
+	gnome_i18n_push_c_numeric_locale ();
 	v = strtod(r, NULL);
-        setlocale (LC_NUMERIC, old_locale);
-	g_free (old_locale);
+	gnome_i18n_pop_c_numeric_locale ();
 
 	release_path (pp);
 	return v;
@@ -1908,16 +1904,13 @@ _gnome_config_set_float (const char *path, gdouble new_value, gboolean priv)
 	ParsedPath *pp;
 	char floatbuf [40];
 	const char *r;
-        char *old_locale;
 	
 	pp = parse_path (path, priv);
 
         /* make sure we write values in a consistent manner */
-        old_locale = g_strdup (setlocale (LC_NUMERIC, NULL));
-        setlocale (LC_NUMERIC, "C");
+	gnome_i18n_push_c_numeric_locale ();
 	g_snprintf (floatbuf, sizeof(floatbuf), "%.17g", new_value);
-        setlocale (LC_NUMERIC, old_locale);
-	g_free (old_locale);
+	gnome_i18n_pop_c_numeric_locale ();
 
 	r = access_config (SET, pp->section, pp->key, floatbuf, pp->file,
 			   NULL);
